# local-model-ledger

./: .gitignore  CONTRIBUTING.md  DATA_LICENSE.md  README.md  pyproject.toml
.github/workflows/: validate.yml
catalog/: README.md
catalog/records/: README.md
catalog/releases/: README.md
catalog/releases/v0.1.0/: ATTRIBUTION.md  SHA256SUMS  catalog.jsonl  manifest.json
docs/: BUILD_PLAN.md  GOVERNANCE.md  METHODOLOGY.md
reviews/: approvals.json
schema/: candidate-record.schema.json  catalog-record.schema.json
scripts/: __init__.py  build_snapshot.py  collect_modelfit.py  pipeline_common.py  promote_candidates.py  resolve_ollama_local.py  validate_catalog.py  validate_staging.py
sources/: README.md  modelfit-hardware-dataset.json  ollama-local-api.json
staging/candidates/: modelfit.jsonl
staging/raw/modelfit-hardware-dataset/41484659c9b9e7b8e3c2e008a7110c7e16b9fbab/: models.json
staging/reports/: ollama-local.json
staging/resolved/: ollama-local.jsonl
tests/: test_pipeline.py  test_validate_catalog.py
