[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "local-model-ledger"
version = "0.0.1"
description = "Open evidence catalog for matching local AI model artifacts to hardware and tasks"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Dylan Dunn" }]
dependencies = ["jsonschema>=4.23,<5"]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "ruff>=0.9,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
packages = []
